backend/template.yaml
# Copyright Amazon.com, Inc. or its affiliates. All Rights Reserved.
# SPDX-License-Identifier: MIT-0
# https://github.com/aws-samples/vpc-multi-tier/tree/master
# https://raw.githubusercontent.com/aws-samples/vpc-multi-tier/refs/heads/master/vpc-multi-tier.yml

AWSTemplateFormatVersion: '2010-09-09'
Transform: AWS::Serverless-2016-10-31

Description: Creates 1-, 2- or 3-tier network environment with 1, 2, or 3 Availability Zones (AZs)

Metadata:
  cfn-lint:
    config:
      ignore_checks:
      # Complex conditions trigger this warning.
      - W1001

  AWS::CloudFormation::Interface:
    ParameterGroups:
    - Label:
        default: System Classification
      Parameters:
      - pEnv
      - pOrg
      - pSystem
    - Label:
        default: Overall VPC Configuration
      Parameters:
      - pVpcName
      - pCidr
      - pNumAzs
      - pCreateInternetGateway
      - pCreateNatGateway
      - pCreateSingleNatGateway
    - Label:
        default: VPC Tier 1
      Parameters:
      - pTier1Create
      - pTier1Name
      - pTier1Subnet1Cidr
      - pTier1Subnet2Cidr
      - pTier1Subnet3Cidr
    - Label:
        default: VPC Tier 2
      Parameters:
      - pTier2Create
      - pTier2Name
      - pTier2Subnet1Cidr
      - pTier2Subnet2Cidr
      - pTier2Subnet3Cidr
    - Label:
        default: VPC Tier 3
      Parameters:
      - pTier3Create
      - pTier3Name
      - pTier3Subnet1Cidr
      - pTier3Subnet2Cidr
      - pTier3Subnet3Cidr
    - Label:
        default: Additional Parameters
      Parameters:    
      - pNotificationList
    - Label:
        default: Permissions Boundary
      Parameters:    
      - pPermissionsBoundaryArn

    ParameterLabels:
      pEnv:
        default: ENV Name
      pVpcName:
        default: VPC Name
      pOrg:
        default: Business Scope
      pSystem:
        default: System Identifier
      pCidr:
        default: VPC CIDR Block
      pNumAzs:
        default: Number of AZs
      pCreateInternetGateway:
        default: Create Internet Gateway?
      pCreateNatGateway:
        default: Create NAT Gateways?
      pCreateSingleNatGateway:
        default: Create single NAT Gateway?

      pTier1Create:
        default: Tier 1 Create?
      pTier1Name:
        default: Tier 1 Name
      pTier1Subnet1Cidr:
        default: Tier 1 AZ 1 - CIDR
      pTier1Subnet2Cidr:
        default: Tier 1 AZ 2 - CIDR
      pTier1Subnet3Cidr:
        default: Tier 1 AZ 3 - CIDR

      pTier2Create:
        default: Tier 2 Create?
      pTier2Name:
        default: Tier 2 Name
      pTier2Subnet1Cidr:
        default: Tier 2 AZ 1 - CIDR
      pTier2Subnet2Cidr:
        default: Tier 2 AZ 2 - CIDR
      pTier2Subnet3Cidr:
        default: Tier 2 AZ 3 - CIDR

      pTier3Create:
        default: Tier 3 Create?
      pTier3Name:
        default: Tier 3 Name
      pTier3Subnet1Cidr:
        default: Tier 3 AZ 1 - CIDR
      pTier3Subnet2Cidr:
        default: Tier 3 AZ 2 - CIDR
      pTier3Subnet3Cidr:
        default: Tier 3 AZ 3 - CIDR

      pNotificationList:
        default: A list of email addresses to receive important DB notifications

      pPermissionsBoundaryArn:
        default: IAM Permissions Boundary ARN (optional)

Parameters:
  pEnv:
    Type: String
    Description: Name of the Environment
    Default: dev

  pVpcName:
    Type: String
    Description: Name of the VPC and used to qualify names of associated resources
    Default: dev

  pOrg:
    Type: String
    Description: Used to qualify IAM resource names
    Default: example

  pSystem:
    Type: String
    Description: Used to qualify IAM role path
    Default: infra

  pCidr:
    Type: String
    Description: CIDR Format x.x.x.x/x
    Default: 10.1.0.0/20
    AllowedPattern: (\d{1,3})\.(\d{1,3})\.(\d{1,3})\.(\d{1,3})/(\d{1,2})
    MinLength: 9
    MaxLength: 18
    ConstraintDescription: Must be a valid IP CIDR range of the form x.x.x.x/x

  pNumAzs:
    Type: String
    Default: 3
    Description: Number of subnets for each tier
    AllowedValues:
    - 1
    - 2
    - 3

  pCreateInternetGateway:
    Type: String
    Description: Whether Internet Gateway should be created
    Default: true
    AllowedValues: [true, false]

  pCreateNatGateway:
    Type: String
    Description: Whether NAT Gateways should be created
    Default: true
    AllowedValues: [true, false]

  pCreateSingleNatGateway:
    Type: String
    Description: Single NAT Gateway in 1st public subnet or NAT Gateway in each public subnet
    Default: true
    AllowedValues: [true, false]

  pTier1Create:
    Type: String
    Description: Whether Tier 1 should be created
    Default: true
    AllowedValues: [true, false]

  pTier1Name:
    Type: String
    Description: Tier 1 Name
    Default: public

  pTier2Create:
    Type: String
    Description: Whether Tier 2 should be created
    Default: true
    AllowedValues: [true, false]

  pTier2Name:
    Type: String
    Description: Tier 2 Name
    Default: private

  pTier3Create:
    Type: String
    Description: Whether Tier 3 should be created
    Default: false
    AllowedValues: [true, false]

  pTier3Name:
    Type: String
    Description: Tier 3 Name
    Default: restricted

  pTier1Subnet1Cidr:
    Type: String
    Description: Tier 1 Subnet AZ 1
    Default: 10.1.0.0/24
    AllowedPattern: (\d{1,3})\.(\d{1,3})\.(\d{1,3})\.(\d{1,3})/(\d{1,2})
    MinLength: 9
    MaxLength: 18
    ConstraintDescription: Must be a valid IP CIDR range of the form x.x.x.x/x

  pTier1Subnet2Cidr:
    Type: String
    Description: Tier 1 Subnet AZ 2
    Default: 10.1.1.0/24
    AllowedPattern: (\d{1,3})\.(\d{1,3})\.(\d{1,3})\.(\d{1,3})/(\d{1,2})
    MinLength: 9
    MaxLength: 18
    ConstraintDescription: Must be a valid IP CIDR range of the form x.x.x.x/x

  pTier1Subnet3Cidr:
    Type: String
    Description: Tier 1 Subnet AZ 3
    Default: 10.1.2.0/24
    AllowedPattern: (\d{1,3})\.(\d{1,3})\.(\d{1,3})\.(\d{1,3})/(\d{1,2})|^$
    ConstraintDescription: Must be a valid IP CIDR range of the form x.x.x.x/x

  pTier2Subnet1Cidr:
    Type: String
    Description: Tier 2 Subnet AZ 1
    Default: 10.1.3.0/24
    AllowedPattern: (\d{1,3})\.(\d{1,3})\.(\d{1,3})\.(\d{1,3})/(\d{1,2})
    MinLength: 9
    MaxLength: 18
    ConstraintDescription: Must be a valid IP CIDR range of the form x.x.x.x/x

  pTier2Subnet2Cidr:
    Type: String
    Description: Tier 2 Subnet AZ 2
    Default: 10.1.4.0/24
    AllowedPattern: (\d{1,3})\.(\d{1,3})\.(\d{1,3})\.(\d{1,3})/(\d{1,2})
    MinLength: 9
    MaxLength: 18
    ConstraintDescription: Must be a valid IP CIDR range of the form x.x.x.x/x

  pTier2Subnet3Cidr:
    Type: String
    Description: Tier 2 Subnet AZ 3
    Default: 10.1.5.0/24
    AllowedPattern: (\d{1,3})\.(\d{1,3})\.(\d{1,3})\.(\d{1,3})/(\d{1,2})|^$
    ConstraintDescription: Must be a valid IP CIDR range of the form x.x.x.x/x

  pTier3Subnet1Cidr:
    Type: String
    Description: Tier 3 Subnet AZ 1
    Default: 10.1.6.0/24
    AllowedPattern: (\d{1,3})\.(\d{1,3})\.(\d{1,3})\.(\d{1,3})/(\d{1,2})|^$
    ConstraintDescription: Must be a valid IP CIDR range of the form x.x.x.x/x

  pTier3Subnet2Cidr:
    Type: String
    Description: Tier 3 Subnet AZ 2
    Default: 10.1.7.0/24
    AllowedPattern: (\d{1,3})\.(\d{1,3})\.(\d{1,3})\.(\d{1,3})/(\d{1,2})|^$
    ConstraintDescription: Must be a valid IP CIDR range of the form x.x.x.x/x

  pTier3Subnet3Cidr:
    Type: String
    Description: Tier 3 Subnet AZ 3
    Default: 10.1.8.0/24
    AllowedPattern: (\d{1,3})\.(\d{1,3})\.(\d{1,3})\.(\d{1,3})/(\d{1,2})|^$
    ConstraintDescription: Must be a valid IP CIDR range of the form x.x.x.x/x

  pNotificationList:
    Type: String
    Description: The Email notification list is used to configure a SNS topic for sending cloudwatch alarm and RDS Event notifications
    AllowedPattern: '^(([^<>()\[\]\\.,;:\s@"]+(\.[^<>()\[\]\\.,;:\s@"]+)*)|(".+"))@((\[[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}])|(([a-zA-Z\-0-9]+\.)+[a-zA-Z]{2,}))$'
    ConstraintDescription: provide a valid email address.

  pPermissionsBoundaryArn:
    Description: IAM Permissions Boundary ARN (optional)
    Type: String
    Default: ''

Conditions:

  cCreateInternetGatewaySubnet1: !Equals [ !Ref pCreateInternetGateway, true ]
  cCreateInternetGatewaySubnet2: !Or [ !And [ !Equals [ !Ref pCreateInternetGateway, true ], !Equals [ !Ref pNumAzs, 2 ] ], !And [ !Equals [ !Ref pCreateInternetGateway, true ], !Equals [ !Ref pNumAzs, 3 ] ]]
  cCreateInternetGatewaySubnet3: !And [ !Equals [ !Ref pCreateInternetGateway, true ], !Equals [ !Ref pNumAzs, 3 ] ]

  cCreateSingleNatGateway:  !And [ !Equals [ !Ref pCreateSingleNatGateway, true ], !Equals [ !Ref pCreateNatGateway, true ] ]
  cCreateNatGatewaySubnet1: !Equals [ !Ref pCreateNatGateway, true ]
  cCreateNatGatewaySubnet2: !And [ !Equals [ !Ref pCreateSingleNatGateway, false ], !Or [ !And [ !Equals [ !Ref pCreateNatGateway, true ], !Equals [ !Ref pNumAzs, 2 ] ], !And [ !Equals [ !Ref pCreateNatGateway, true ], !Equals [ !Ref pNumAzs, 3 ] ] ] ]
  cCreateNatGatewaySubnet3: !And [ !Equals [ !Ref pCreateSingleNatGateway, false ], !And [ !Equals [ !Ref pCreateNatGateway, true ], !Equals [ !Ref pNumAzs, 3 ] ] ]

  cCreateTier1Subnet1: !Equals [ !Ref pTier1Create, true ]
  cCreateTier2Subnet1: !Equals [ !Ref pTier2Create, true ]
  cCreateTier3Subnet1: !Equals [ !Ref pTier3Create, true ]

  cCreateTier1Subnet2: !Or [ !And [ !Equals [ !Ref pTier1Create, true ], !Equals [ !Ref pNumAzs, 2 ] ], !And [ !Equals [ !Ref pTier1Create, true ], !Equals [ !Ref pNumAzs, 3 ] ] ]
  cCreateTier2Subnet2: !Or [ !And [ !Equals [ !Ref pTier2Create, true ], !Equals [ !Ref pNumAzs, 2 ] ], !And [ !Equals [ !Ref pTier2Create, true ], !Equals [ !Ref pNumAzs, 3 ] ] ]
  cCreateTier3Subnet2: !Or [ !And [ !Equals [ !Ref pTier3Create, true ], !Equals [ !Ref pNumAzs, 2 ] ], !And [ !Equals [ !Ref pTier3Create, true ], !Equals [ !Ref pNumAzs, 3 ] ] ]

  cCreateTier1Subnet3: !And [ !Equals [ !Ref pTier1Create, true ], !Equals [ !Ref pNumAzs, 3 ] ]
  cCreateTier2Subnet3: !And [ !Equals [ !Ref pTier2Create, true ], !Equals [ !Ref pNumAzs, 3 ] ]
  cCreateTier3Subnet3: !And [ !Equals [ !Ref pTier3Create, true ], !Equals [ !Ref pNumAzs, 3 ] ]

  cCreateTier2NatGatewaySubnet1: !And [ !Equals [ !Ref pTier2Create, true ], !Equals [ !Ref pCreateNatGateway, true ] ]
  cCreateTier2NatGatewaySubnet2: !Or [ !And [ !Equals [ !Ref pTier2Create, true ], !Equals [ !Ref pCreateNatGateway, true ], !Equals [ !Ref pNumAzs, 2 ] ], !And [ !Equals [ !Ref pTier2Create, true ], !Equals [ !Ref pCreateNatGateway, true ], !Equals [ !Ref pNumAzs, 3 ] ]]
  cCreateTier2NatGatewaySubnet3: !And [ !Equals [ !Ref pTier2Create, true ], !Equals [ !Ref pCreateNatGateway, true ], !Equals [ !Ref pNumAzs, 3 ] ]

  cCreateTier3NatGatewaySubnet1: !And [ !Equals [ !Ref pTier3Create, true ], !Equals [ !Ref pCreateNatGateway, true ] ]
  cCreateTier3NatGatewaySubnet2: !Or [ !And [ !Equals [ !Ref pTier3Create, true ], !Equals [ !Ref pCreateNatGateway, true ], !Equals [ !Ref pNumAzs, 2 ] ], !And [ !Equals [ !Ref pTier3Create, true ], !Equals [ !Ref pCreateNatGateway, true ], !Equals [ !Ref pNumAzs, 3 ] ]]
  cCreateTier3NatGatewaySubnet3: !And [ !Equals [ !Ref pTier3Create, true ], !Equals [ !Ref pCreateNatGateway, true ], !Equals [ !Ref pNumAzs, 3 ] ]

  cUsePermissionsBoundary: !Not [!Equals [ !Ref pPermissionsBoundaryArn, '' ] ]

Resources:

  rVpc:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: !Ref pCidr
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
      - Key: Name
        Value: !Sub ${pSystem}-${pVpcName}

  rVpcCidrBlockIpv6:
    Type: AWS::EC2::VPCCidrBlock
    Properties:
      VpcId: !Ref rVpc
      AmazonProvidedIpv6CidrBlock: true

#------------------------------------------------------------------------------
# Enable VPC FlowLogs
#------------------------------------------------------------------------------

  rVpcFlowLogRole:
    Type: AWS::IAM::Role
    Properties:
      RoleName: !Sub ${pOrg}-${pSystem}-${pVpcName}-${AWS::Region}-svc-flow-logs
      AssumeRolePolicyDocument:
        Version: 2012-10-17
        Statement:
          -
            Effect: Allow
            Principal:
              Service: vpc-flow-logs.amazonaws.com
            Action: sts:AssumeRole
      Path: !Sub /${pOrg}/${pSystem}/
      Policies:
        -
          PolicyName: root
          PolicyDocument:
            Version: 2012-10-17
            Statement:
              -
                Effect: Allow
                Action:
                  - logs:CreateLogGroup
                  - logs:CreateLogStream
                  - logs:DescribeLogGroups
                  - logs:DescribeLogStreams
                  - logs:PutLogEvents
                Resource: !Sub "arn:aws:logs:${AWS::Region}:*:log-group:/${pSystem}/${pVpcName}/flowlogs:*"
      PermissionsBoundary: !If [ cUsePermissionsBoundary, !Ref pPermissionsBoundaryArn, !Ref 'AWS::NoValue' ]

  rVpcFlowLogGroup:
    Type: AWS::Logs::LogGroup
    Properties:
      LogGroupName: !Sub /${pSystem}/${pVpcName}/flowlogs
      RetentionInDays: 1

  rVpcFlowLog:
    Type: AWS::EC2::FlowLog
    Properties:
      DeliverLogsPermissionArn: !GetAtt rVpcFlowLogRole.Arn
      LogGroupName: !Ref rVpcFlowLogGroup
      ResourceId: !Ref rVpc
      ResourceType: VPC
      TrafficType: ALL

#------------------------------------------------------------------------------
# Internet Gateway
#------------------------------------------------------------------------------

  rInternetGateway:
    Type: AWS::EC2::InternetGateway
    Condition: cCreateInternetGatewaySubnet1
    Properties:
      Tags:
      - Key: Name
        Value: !Sub ${pSystem}-${pVpcName}

  rInternetGatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Condition: cCreateInternetGatewaySubnet1
    Properties:
      InternetGatewayId: !Ref rInternetGateway
      VpcId: !Ref rVpc

#------------------------------------------------------------------------------
# Tier 1
#------------------------------------------------------------------------------

  rTier1EipSubnet1:
    Type: AWS::EC2::EIP
    Condition: cCreateNatGatewaySubnet1
    Properties:
      Domain: vpc
      Tags:
      - Key: Name
        Value: !Sub ${pSystem}-${pVpcName}-natgw-1

  rTier1EipSubnet2:
    Type: AWS::EC2::EIP
    Condition: cCreateNatGatewaySubnet2
    Properties:
      Domain: vpc
      Tags:
      - Key: Name
        Value: !Sub ${pSystem}-${pVpcName}-natgw-2

  rTier1EipSubnet3:
    Type: AWS::EC2::EIP
    Condition: cCreateNatGatewaySubnet3
    Properties:
      Domain: vpc
      Tags:
      - Key: Name
        Value: !Sub ${pSystem}-${pVpcName}-natgw-3

  rTier1Subnet1:
    Type: AWS::EC2::Subnet
    Condition: cCreateTier1Subnet1
    Properties:
      AvailabilityZone: !Select
                    - 0
                    - !GetAZs ''
      CidrBlock: !Ref pTier1Subnet1Cidr
      Ipv6CidrBlock: !Select [ 0, !Cidr [ !Select [ 0, !GetAtt rVpc.Ipv6CidrBlocks], 256, 64 ]]
      VpcId: !Ref rVpc
      Tags:
      - Key: Name
        Value: !Sub ${pSystem}-${pVpcName}-${pTier1Name}-1

  rTier1Subnet2:
    Type: AWS::EC2::Subnet
    Condition: cCreateTier1Subnet2
    Properties:
      AvailabilityZone: !Select
                    - 1
                    - !GetAZs ''
      CidrBlock: !Ref pTier1Subnet2Cidr
      Ipv6CidrBlock: !Select [ 1, !Cidr [ !Select [ 0, !GetAtt rVpc.Ipv6CidrBlocks], 256, 64 ]]
      VpcId: !Ref rVpc
      Tags:
      - Key: Name
        Value: !Sub ${pSystem}-${pVpcName}-${pTier1Name}-2

  rTier1Subnet3:
    Type: AWS::EC2::Subnet
    Condition: cCreateTier1Subnet3
    Properties:
      AvailabilityZone: !Select
                    - 2
                    - !GetAZs ''
      CidrBlock: !Ref pTier1Subnet3Cidr
      Ipv6CidrBlock: !Select [ 2, !Cidr [ !Select [ 0, !GetAtt rVpc.Ipv6CidrBlocks], 256, 64 ]]
      VpcId: !Ref rVpc
      Tags:
      - Key: Name
        Value: !Sub ${pSystem}-${pVpcName}-${pTier1Name}-3

  rTier1NatGatewaySubnet1:
    Type: AWS::EC2::NatGateway
    Metadata:
      cfn-lint:
        config:
          ignore_checks:
            - E3005
    DependsOn: rInternetGatewayAttachment
    Condition: cCreateNatGatewaySubnet1
    Properties:
      AllocationId: !GetAtt rTier1EipSubnet1.AllocationId
      SubnetId: !Ref rTier1Subnet1
      Tags:
      - Key: Name
        Value: !Sub ${pSystem}-${pVpcName}-1

  rTier1NatGatewaySubnet2:
    Type: AWS::EC2::NatGateway
    Metadata:
      cfn-lint:
        config:
          ignore_checks:
            - E3005
    DependsOn: rInternetGatewayAttachment
    Condition: cCreateNatGatewaySubnet2
    Properties:
      AllocationId: !GetAtt rTier1EipSubnet2.AllocationId
      SubnetId: !Ref rTier1Subnet2
      Tags:
      - Key: Name
        Value: !Sub ${pSystem}-${pVpcName}-2

  rTier1NatGatewaySubnet3:
    Type: AWS::EC2::NatGateway
    Metadata:
      cfn-lint:
        config:
          ignore_checks:
            - E3005
    DependsOn: rInternetGatewayAttachment
    Condition: cCreateNatGatewaySubnet3
    Properties:
      AllocationId: !GetAtt rTier1EipSubnet3.AllocationId
      SubnetId: !Ref rTier1Subnet3
      Tags:
      - Key: Name
        Value: !Sub ${pSystem}-${pVpcName}-3

  rEgressOnlyInternetGateway:
    Type: AWS::EC2::EgressOnlyInternetGateway
    Properties:
      VpcId: !Ref rVpc

  rTier1RouteTable1:
    Type: AWS::EC2::RouteTable
    Condition: cCreateInternetGatewaySubnet1
    DependsOn: rInternetGatewayAttachment
    Properties:
      VpcId: !Ref rVpc
      Tags:
      - Key: Name
        Value: !Sub ${pSystem}-${pVpcName}-${pTier1Name}-1

  rTier1RouteTable2:
    Type: AWS::EC2::RouteTable
    Condition: cCreateInternetGatewaySubnet2
    DependsOn: rInternetGatewayAttachment
    Properties:
      VpcId: !Ref rVpc
      Tags:
      - Key: Name
        Value: !Sub ${pSystem}-${pVpcName}-${pTier1Name}-2

  rTier1RouteTable3:
    Type: AWS::EC2::RouteTable
    Condition: cCreateInternetGatewaySubnet3
    DependsOn: rInternetGatewayAttachment
    Properties:
      VpcId: !Ref rVpc
      Tags:
      - Key: Name
        Value: !Sub ${pSystem}-${pVpcName}-${pTier1Name}-3

  rTier1IgwRoute1:
    Type: AWS::EC2::Route
    Condition: cCreateInternetGatewaySubnet1
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref rInternetGateway
      RouteTableId: !Ref rTier1RouteTable1

  rTier1IgwIpv6Route1:
    Type: AWS::EC2::Route
    Condition: cCreateInternetGatewaySubnet1
    Properties:
      DestinationIpv6CidrBlock: ::/0
      GatewayId: !Ref rInternetGateway
      RouteTableId: !Ref rTier1RouteTable1

  rTier1IgwRoute2:
    Type: AWS::EC2::Route
    Condition: cCreateInternetGatewaySubnet2
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref rInternetGateway
      RouteTableId: !Ref rTier1RouteTable2

  rTier1IgwIpv6Route2:
    Type: AWS::EC2::Route
    Condition: cCreateInternetGatewaySubnet2
    Properties:
      DestinationIpv6CidrBlock: ::/0
      GatewayId: !Ref rInternetGateway
      RouteTableId: !Ref rTier1RouteTable2

  rTier1IgwRoute3:
    Type: AWS::EC2::Route
    Condition: cCreateInternetGatewaySubnet3
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref rInternetGateway
      RouteTableId: !Ref rTier1RouteTable3

  rTier1IgwIpv6Route3:
    Type: AWS::EC2::Route
    Condition: cCreateInternetGatewaySubnet3
    Properties:
      DestinationIpv6CidrBlock: ::/0
      GatewayId: !Ref rInternetGateway
      RouteTableId: !Ref rTier1RouteTable3

  rTier1Subnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Condition: cCreateInternetGatewaySubnet1
    Properties:
      RouteTableId: !Ref rTier1RouteTable1
      SubnetId: !Ref rTier1Subnet1

  rTier1Subnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Condition: cCreateInternetGatewaySubnet2
    Properties:
      RouteTableId: !Ref rTier1RouteTable2
      SubnetId: !Ref rTier1Subnet2

  rTier1Subnet3RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Condition: cCreateInternetGatewaySubnet3
    Properties:
      RouteTableId: !Ref rTier1RouteTable3
      SubnetId: !Ref rTier1Subnet3

#------------------------------------------------------------------------------
# Tier 2
#------------------------------------------------------------------------------

  rTier2Subnet1:
    Type: AWS::EC2::Subnet
    Condition: cCreateTier2Subnet1
    Properties:
      AvailabilityZone: !Select
                    - 0
                    - !GetAZs ''
      CidrBlock: !Ref pTier2Subnet1Cidr
      Ipv6CidrBlock: !Select [ 3, !Cidr [ !Select [ 0, !GetAtt rVpc.Ipv6CidrBlocks], 256, 64 ]]
      VpcId: !Ref rVpc
      Tags:
      - Key: Name
        Value: !Sub ${pSystem}-${pVpcName}-${pTier2Name}-1

  rTier2Subnet2:
    Type: AWS::EC2::Subnet
    Condition: cCreateTier2Subnet2
    Properties:
      AvailabilityZone: !Select
                    - 1
                    - !GetAZs ''
      CidrBlock: !Ref pTier2Subnet2Cidr
      Ipv6CidrBlock: !Select [ 4, !Cidr [ !Select [ 0, !GetAtt rVpc.Ipv6CidrBlocks], 256, 64 ]]
      VpcId: !Ref rVpc
      Tags:
      - Key: Name
        Value: !Sub ${pSystem}-${pVpcName}-${pTier2Name}-2

  rTier2Subnet3:
    Type: AWS::EC2::Subnet
    Condition: cCreateTier2Subnet3
    Properties:
      AvailabilityZone: !Select
                    - 2
                    - !GetAZs ''
      CidrBlock: !Ref pTier2Subnet3Cidr
      Ipv6CidrBlock: !Select [ 5, !Cidr [ !Select [ 0, !GetAtt rVpc.Ipv6CidrBlocks], 256, 64 ]]
      VpcId: !Ref rVpc
      Tags:
      - Key: Name
        Value: !Sub ${pSystem}-${pVpcName}-${pTier2Name}-3

  rTier2RouteTable1:
    Type: AWS::EC2::RouteTable
    Metadata:
      cfn-lint:
        config:
          ignore_checks:
            - E3005
    Condition: cCreateTier2Subnet1
    DependsOn: rInternetGatewayAttachment
    Properties:
      VpcId: !Ref rVpc
      Tags:
      - Key: Name
        Value: !Sub ${pSystem}-${pVpcName}-${pTier2Name}-1

  rTier2RouteTable2:
    Type: AWS::EC2::RouteTable
    Metadata:
      cfn-lint:
        config:
          ignore_checks:
            - E3005
    Condition: cCreateTier2Subnet2
    DependsOn: rInternetGatewayAttachment
    Properties:
      VpcId: !Ref rVpc
      Tags:
      - Key: Name
        Value: !Sub ${pSystem}-${pVpcName}-${pTier2Name}-2

  rTier2RouteTable3:
    Type: AWS::EC2::RouteTable
    Metadata:
      cfn-lint:
        config:
          ignore_checks:
            - E3005
    Condition: cCreateTier2Subnet3
    DependsOn: rInternetGatewayAttachment
    Properties:
      VpcId: !Ref rVpc
      Tags:
      - Key: Name
        Value: !Sub ${pSystem}-${pVpcName}-${pTier2Name}-3

  rTier2NatGwRoute1:
    Type: AWS::EC2::Route
    Condition: cCreateTier2NatGatewaySubnet1
    Properties:
      RouteTableId: !Ref rTier2RouteTable1
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref rTier1NatGatewaySubnet1

  rTier2Ipv6Route1:
    Type: AWS::EC2::Route
    Condition: cCreateTier2Subnet1
    Properties:
      RouteTableId: !Ref rTier2RouteTable1
      DestinationIpv6CidrBlock: ::/0
      EgressOnlyInternetGatewayId: !Ref rEgressOnlyInternetGateway

  rTier2NatGwRoute2:
    Type: AWS::EC2::Route
    Condition: cCreateTier2NatGatewaySubnet2
    Properties:
      RouteTableId: !Ref rTier2RouteTable2
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !If [ cCreateSingleNatGateway, !Ref rTier1NatGatewaySubnet1, !Ref rTier1NatGatewaySubnet2  ]

  rTier2Ipv6Route2:
    Type: AWS::EC2::Route
    Condition: cCreateTier2Subnet2
    Properties:
      RouteTableId: !Ref rTier2RouteTable2
      DestinationIpv6CidrBlock: ::/0
      EgressOnlyInternetGatewayId: !Ref rEgressOnlyInternetGateway

  rTier2NatGwRoute3:
    Type: AWS::EC2::Route
    Condition: cCreateTier2NatGatewaySubnet3
    Properties:
      RouteTableId: !Ref rTier2RouteTable3
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !If [ cCreateSingleNatGateway, !Ref rTier1NatGatewaySubnet1, !Ref rTier1NatGatewaySubnet3  ]

  rTier2Ipv6Route3:
    Type: AWS::EC2::Route
    Condition: cCreateTier2Subnet3
    Properties:
      RouteTableId: !Ref rTier2RouteTable3
      DestinationIpv6CidrBlock: ::/0
      EgressOnlyInternetGatewayId: !Ref rEgressOnlyInternetGateway

  rTier2SubnetRouteTableAssociation1:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Condition: cCreateTier2Subnet1
    Properties:
      RouteTableId: !Ref rTier2RouteTable1
      SubnetId: !Ref rTier2Subnet1

  rTier2SubnetRouteTableAssociation2:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Condition: cCreateTier2Subnet2
    Properties:
      RouteTableId: !Ref rTier2RouteTable2
      SubnetId: !Ref rTier2Subnet2

  rTier2SubnetRouteTableAssociation3:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Condition: cCreateTier2Subnet3
    Properties:
      RouteTableId: !Ref rTier2RouteTable3
      SubnetId: !Ref rTier2Subnet3

#------------------------------------------------------------------------------
# Tier 3
#------------------------------------------------------------------------------

  rTier3Subnet1:
    Type: AWS::EC2::Subnet
    Condition: cCreateTier3Subnet1
    Properties:
      AvailabilityZone: !Select
                    - 0
                    - !GetAZs ''
      CidrBlock: !Ref pTier3Subnet1Cidr
      Ipv6CidrBlock: !Select [ 6, !Cidr [ !Select [ 0, !GetAtt rVpc.Ipv6CidrBlocks], 256, 64 ]]
      VpcId: !Ref rVpc
      Tags:
      - Key: Name
        Value: !Sub ${pSystem}-${pVpcName}-${pTier3Name}-1

  rTier3Subnet2:
    Type: AWS::EC2::Subnet
    Condition: cCreateTier3Subnet2
    Properties:
      AvailabilityZone: !Select
                    - 1
                    - !GetAZs ''
      CidrBlock: !Ref pTier3Subnet2Cidr
      Ipv6CidrBlock: !Select [ 7, !Cidr [ !Select [ 0, !GetAtt rVpc.Ipv6CidrBlocks], 256, 64 ]]
      VpcId: !Ref rVpc
      Tags:
      - Key: Name
        Value: !Sub ${pSystem}-${pVpcName}-${pTier3Name}-2

  rTier3Subnet3:
    Type: AWS::EC2::Subnet
    Condition: cCreateTier3Subnet3
    Properties:
      AvailabilityZone: !Select
                    - 2
                    - !GetAZs ''
      CidrBlock: !Ref pTier3Subnet3Cidr
      Ipv6CidrBlock: !Select [ 8, !Cidr [ !Select [ 0, !GetAtt rVpc.Ipv6CidrBlocks], 256, 64 ]]
      VpcId: !Ref rVpc
      Tags:
      - Key: Name
        Value: !Sub ${pSystem}-${pVpcName}-${pTier3Name}-3

  rTier3RouteTable1:
    Type: AWS::EC2::RouteTable
    Metadata:
      cfn-lint:
        config:
          ignore_checks:
            - E3005
    Condition: cCreateTier3Subnet1
    DependsOn: rInternetGatewayAttachment
    Properties:
      VpcId: !Ref rVpc
      Tags:
      - Key: Name
        Value: !Sub ${pSystem}-${pVpcName}-${pTier3Name}-1

  rTier3RouteTable2:
    Type: AWS::EC2::RouteTable
    Metadata:
      cfn-lint:
        config:
          ignore_checks:
            - E3005
    Condition: cCreateTier3Subnet2
    DependsOn: rInternetGatewayAttachment
    Properties:
      VpcId: !Ref rVpc
      Tags:
      - Key: Name
        Value: !Sub ${pSystem}-${pVpcName}-${pTier3Name}-2

  rTier3RouteTable3:
    Type: AWS::EC2::RouteTable
    Metadata:
      cfn-lint:
        config:
          ignore_checks:
            - E3005
    Condition: cCreateTier3Subnet3
    DependsOn: rInternetGatewayAttachment
    Properties:
      VpcId: !Ref rVpc
      Tags:
      - Key: Name
        Value: !Sub ${pSystem}-${pVpcName}-${pTier3Name}-3

  rTier3NatGwRoute1:
    Type: AWS::EC2::Route
    Condition: cCreateTier3NatGatewaySubnet1
    Properties:
      RouteTableId: !Ref rTier3RouteTable1
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref rTier1NatGatewaySubnet1

  rTier3Ipv6Route1:
    Type: AWS::EC2::Route
    Condition: cCreateTier3Subnet1
    Properties:
      RouteTableId: !Ref rTier3RouteTable1
      DestinationIpv6CidrBlock: ::/0
      EgressOnlyInternetGatewayId: !Ref rEgressOnlyInternetGateway

  rTier3NatGwRoute2:
    Type: AWS::EC2::Route
    Condition: cCreateTier3NatGatewaySubnet2
    Properties:
      RouteTableId: !Ref rTier3RouteTable2
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !If [ cCreateSingleNatGateway, !Ref rTier1NatGatewaySubnet1, !Ref rTier1NatGatewaySubnet2  ]

  rTier3Ipv6Route2:
    Type: AWS::EC2::Route
    Condition: cCreateTier3Subnet2
    Properties:
      RouteTableId: !Ref rTier3RouteTable2
      DestinationIpv6CidrBlock: ::/0
      EgressOnlyInternetGatewayId: !Ref rEgressOnlyInternetGateway

  rTier3NatGwRoute3:
    Type: AWS::EC2::Route
    Condition: cCreateTier3NatGatewaySubnet3
    Properties:
      RouteTableId: !Ref rTier3RouteTable3
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !If [ cCreateSingleNatGateway, !Ref rTier1NatGatewaySubnet1, !Ref rTier1NatGatewaySubnet3  ]

  rTier3Ipv6Route3:
    Type: AWS::EC2::Route
    Condition: cCreateTier3Subnet3
    Properties:
      RouteTableId: !Ref rTier3RouteTable3
      DestinationIpv6CidrBlock: ::/0
      EgressOnlyInternetGatewayId: !Ref rEgressOnlyInternetGateway

  rTier3SubnetRouteTableAssociation1:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Condition: cCreateTier3Subnet1
    Properties:
      RouteTableId: !Ref rTier3RouteTable1
      SubnetId: !Ref rTier3Subnet1

  rTier3SubnetRouteTableAssociation2:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Condition: cCreateTier3Subnet2
    Properties:
      RouteTableId: !Ref rTier3RouteTable2
      SubnetId: !Ref rTier3Subnet2

  rTier3SubnetRouteTableAssociation3:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Condition: cCreateTier3Subnet3
    Properties:
      RouteTableId: !Ref rTier3RouteTable3
      SubnetId: !Ref rTier3Subnet3

  EnvironmentKmsKey:
    Type: AWS::KMS::Key
    Properties:
      Description: !Sub KMS key for environment ${pEnv}
      Enabled: true
      EnableKeyRotation: true
      KeyPolicy:
        Version: 2012-10-17
        Id: key-default-1
        Statement:
         -
            Sid: Enable IAM User Permissions
            Effect: Allow
            Principal:
              AWS: !Sub arn:aws:iam::${AWS::AccountId}:root
            Action: "kms:*"
            Resource: "*"

  EnvironmentKmsKeySSM:
    Type: AWS::SSM::Parameter
    Properties:
      Name: !Sub /${pEnv}/EnvironmentKmsKey
      Type: String
      Value: !GetAtt EnvironmentKmsKey.Arn

  HostedZone:
    Type: AWS::Route53::HostedZone
    Properties:
      HostedZoneConfig:
        Comment: vpc hosted zone
      HostedZoneTags:
        - Key: Name
          Value: !Ref AWS::StackName
        - Key: Environment
          Value: !Ref pEnv
      Name: !Sub ${pEnv}.aws
      VPCs:
        - VPCId: !Ref rVpc
          VPCRegion: !Ref AWS::Region

  SensitiveDataDatabase:
    Type: AWS::Serverless::Application
    Properties:
      Location: aurora-postgres.yaml
      Parameters:
        pEnv: !Ref pEnv
        DBName: !Sub ${pEnv}AiAloeSensitiveDb
        DBType: sensitive
        IamUser: aloesens
        DBPort: 5432
        DBUsername: aloeadmin
        DBEngineVersion: 16.1
        DBInstanceClass: db.t4g.medium
        EnvironmentStage: !Ref pEnv
        Application: AI ALOE
        Confidentiality: pii/phi
        Compliance: other
        VPC: !Ref rVpc
        Subnets: !Join
          - ','
          - - !If
              - cCreateTier2Subnet1
              - !Ref rTier2Subnet1
              - !Ref AWS::NoValue
            - !If
              - cCreateTier2Subnet2
              - !Ref rTier2Subnet2
              - !Ref AWS::NoValue
            - !If
              - cCreateTier2Subnet3
              - !Ref rTier2Subnet3
              - !Ref AWS::NoValue
        KmsKey: !GetAtt EnvironmentKmsKey.Arn
        HostedZoneId: !Ref HostedZone
        HostedZoneName: !Sub ${pEnv}.aws
        NotificationList: !Ref pNotificationList

  PublishedDataDatabase:
    Type: AWS::Serverless::Application
    Properties:
      Location: aurora-postgres.yaml
      Parameters:
        pEnv: !Ref pEnv
        DBName: !Sub ${pEnv}AiAloePublishedDb
        DBType: published
        IamUser: aloesens
        DBPort: 5432
        DBUsername: aloeadmin
        DBEngineVersion: 16.1
        DBInstanceClass: db.t4g.medium
        EnvironmentStage: !Ref pEnv
        Application: AI ALOE
        Confidentiality: public
        Compliance: other
        VPC: !Ref rVpc
        Subnets: !Join
          - ','
          - - !If
              - cCreateTier2Subnet1
              - !Ref rTier2Subnet1
              - !Ref AWS::NoValue
            - !If
              - cCreateTier2Subnet2
              - !Ref rTier2Subnet2
              - !Ref AWS::NoValue
            - !If
              - cCreateTier2Subnet3
              - !Ref rTier2Subnet3
              - !Ref AWS::NoValue
        KmsKey: !GetAtt EnvironmentKmsKey.Arn
        HostedZoneId: !Ref HostedZone
        HostedZoneName: !Sub ${pEnv}.aws
        NotificationList: !Ref pNotificationList

  AggregateFunction:
    Type: AWS::Serverless::Function
    Properties:
      Handler: aggregate.handler
      CodeUri: aggregate/
      Runtime: nodejs20.x
      MemorySize: 256
      Timeout: 300
      Architectures:
        - x86_64
      VpcConfig: 
        SecurityGroupIds: 
          - !GetAtt PublishedDataDatabase.Outputs.ClusterSecurityGroup
        SubnetIds:
          - !If
            - cCreateTier2Subnet1
            - !Ref rTier2Subnet1
            - !Ref AWS::NoValue
          - !If
            - cCreateTier2Subnet2
            - !Ref rTier2Subnet2
            - !Ref AWS::NoValue
          - !If
              - cCreateTier2Subnet3
              - !Ref rTier2Subnet3
              - !Ref AWS::NoValue
        Ipv6AllowedForDualStack: true
      Environment:
        Variables:
          DBHost: !GetAtt PublishedDataDatabase.Outputs.ClusterEndpoint
          DBPort: !GetAtt PublishedDataDatabase.Outputs.Port
          DBName: !GetAtt PublishedDataDatabase.Outputs.DBName
          DBIamUser: !GetAtt PublishedDataDatabase.Outputs.IamUser
          AwsRegion: !Ref AWS::Region
          NODE_OPTIONS: --enable-source-maps
      Layers:
        - !Ref SchemaLayer
      Policies:
        - AWSLambdaBasicExecutionRole
        - Statement:
            - Sid: RDSConnectPolicy
              Effect: Allow
              Action:
                - rds-db:connect
              Resource: !Sub arn:aws:rds-db:${AWS::Region}:${AWS::AccountId}:dbuser:*/${PublishedDataDatabase.Outputs.IamUser}
    Metadata:
      BuildMethod: esbuild
      BuildProperties:
        Minify: false
        Target: "es2020"
        Sourcemap: true
        EntryPoints: 
          - aggregate.ts

  SchemaLayer:
    Type: AWS::Serverless::LayerVersion
    Properties:
      LayerName: schemaDocs
      ContentUri: ../api/json-schema
      CompatibleRuntimes:
        - nodejs20.x

  AggregateScheduleRule:
    Type: AWS::Scheduler::Schedule
    Properties:
      Name: aggregate-function-schedule
      FlexibleTimeWindow:
        Mode: 'OFF'
      ScheduleExpression: "cron(0 * * * ? *)" # Runs every hour
      Target:
        Arn: !GetAtt AggregateFunction.Arn
        RoleArn: !GetAtt AggregateScheduleRole.Arn

  AggregateScheduleRole:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Version: '2012-10-17'
        Statement:
          - Effect: Allow
            Principal:
              Service: scheduler.amazonaws.com
            Action: sts:AssumeRole
      Policies:
        - PolicyName: InvokeLambdaPolicy
          PolicyDocument:
            Version: '2012-10-17'
            Statement:
              - Effect: Allow
                Action: lambda:InvokeFunction
                Resource: !GetAtt AggregateFunction.Arn

Outputs:

  oVpcId:
    Description: VPC ID
    Value: !Ref rVpc
    Export:
      Name: !Sub ${AWS::StackName}::vpc-id

  oTier1Subnet1:
    Description: Tier 1 Subnet 1 ID
    Value: !Ref rTier1Subnet1
    Condition: cCreateTier1Subnet1
    Export:
      Name: !Sub ${AWS::StackName}::${pTier1Name}-subnet-id-1

  oTier1Subnet2:
    Description: Tier 1 Subnet 2 ID
    Value: !Ref rTier1Subnet2
    Condition: cCreateTier1Subnet2
    Export:
      Name: !Sub ${AWS::StackName}::${pTier1Name}-subnet-id-2

  oTier1Subnet3:
    Description: Tier 1 Subnet 3 ID
    Value: !Ref rTier1Subnet3
    Condition: cCreateTier1Subnet3
    Export:
      Name: !Sub ${AWS::StackName}::${pTier1Name}-subnet-id-3

  oTier2Subnet1:
    Description: Tier 2 Subnet 1 ID
    Value: !Ref rTier2Subnet1
    Condition: cCreateTier2Subnet1
    Export:
      Name: !Sub ${AWS::StackName}::${pTier2Name}-subnet-id-1

  oTier2Subnet2:
    Description: Tier 2 Subnet 2 ID
    Value: !Ref rTier2Subnet2
    Condition: cCreateTier2Subnet2
    Export:
      Name: !Sub ${AWS::StackName}::${pTier2Name}-subnet-id-2

  oTier2Subnet3:
    Description: Tier 2 Subnet 3 ID
    Value: !Ref rTier2Subnet3
    Condition: cCreateTier2Subnet3
    Export:
      Name: !Sub ${AWS::StackName}::${pTier2Name}-subnet-id-3

  oTier3Subnet1:
    Description: Tier 3 Subnet 1 ID
    Value: !Ref rTier3Subnet1
    Condition: cCreateTier3Subnet1
    Export:
      Name: !Sub ${AWS::StackName}::${pTier3Name}-subnet-id-1

  oTier3Subnet2:
    Description: Tier 3 Subnet 2 ID
    Value: !Ref rTier3Subnet2
    Condition: cCreateTier3Subnet2
    Export:
      Name: !Sub ${AWS::StackName}::${pTier3Name}-subnet-id-2

  oTier3Subnet3:
    Description: Tier 3 Subnet 3 ID
    Value: !Ref rTier3Subnet3
    Condition: cCreateTier3Subnet3
    Export:
      Name: !Sub ${AWS::StackName}::${pTier3Name}-subnet-id-3

  PrivateSubnets:
    Value: !Join
      - ','
      - - !If
          - cCreateTier2Subnet1
          - !Ref rTier2Subnet1
          - !Ref AWS::NoValue
        - !If
          - cCreateTier2Subnet2
          - !Ref rTier2Subnet2
          - !Ref AWS::NoValue
        - !If
          - cCreateTier2Subnet3
          - !Ref rTier2Subnet3
          - !Ref AWS::NoValue
  
  SensitiveDataDatabaseEndpoint:
    Description: Sensitive data database endpoint
    Value: !GetAtt SensitiveDataDatabase.Outputs.ClusterEndpoint
    Export:
      Name: !Sub ${AWS::StackName}::sensitive-data-db-endpoint

  SensitiveDataDatabaseEndpointPort:
    Description: Sensitive data database endpoint port
    Value: !GetAtt SensitiveDataDatabase.Outputs.Port
    Export:
      Name: !Sub ${AWS::StackName}::sensitive-data-db-endpoint-port

  SensitiveDataDatabaseDBName:
    Description: Sensitive data database name
    Value: !GetAtt SensitiveDataDatabase.Outputs.DBName
    Export:
      Name: !Sub ${AWS::StackName}::sensitive-data-db-name

  SensitiveDataDatabaseIamUser:
    Description: Sensitive data database IAM user
    Value: !GetAtt SensitiveDataDatabase.Outputs.IamUser
    Export:
      Name: !Sub ${AWS::StackName}::sensitive-data-db-iam-user
  
  SensitiveDataDatabaseSecurityGroup:
    Description: Sensitive data database security group
    Value: !GetAtt SensitiveDataDatabase.Outputs.ClusterSecurityGroup
    Export:
      Name: !Sub ${AWS::StackName}::sensitive-data-db-security-group

  PublishedDataDatabaseEndpoint:
    Description: Published data database endpoint
    Value: !GetAtt PublishedDataDatabase.Outputs.ClusterEndpoint
    Export:
      Name: !Sub ${AWS::StackName}::published-data-db-endpoint

  PublishedDataDatabaseEndpointPort:
    Description: Published data database endpoint port
    Value: !GetAtt PublishedDataDatabase.Outputs.Port
    Export:
      Name: !Sub ${AWS::StackName}::published-data-db-endpoint-port

  PublishedDataDatabaseDBName:
    Description: Published data database name
    Value: !GetAtt PublishedDataDatabase.Outputs.DBName
    Export:
      Name: !Sub ${AWS::StackName}::published-data-db-name

  PublishedDataDatabaseIamUser:
    Description: Published data database IAM user
    Value: !GetAtt PublishedDataDatabase.Outputs.IamUser
    Export:
      Name: !Sub ${AWS::StackName}::published-data-db-iam-user
  
  PublishedDataDatabaseSecurityGroup:
    Description: Published data database security group
    Value: !GetAtt PublishedDataDatabase.Outputs.ClusterSecurityGroup
    Export:
      Name: !Sub ${AWS::StackName}::published-data-db-security-group
